# hair-multica

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.agent_context/: issue_context.md
.github/: ci.yml.disabled
app/: config.py  database.py  main.py  models.py  schemas.py
app/middleware/: error_handler.py
app/routers/: comment.py  face.py  hairstyle.py  hairstyle_generate.py  health.py  tasks.py  upload.py
app/services/: llm.py  storage.py  task_manager.py
backend/: .dockerignore  Dockerfile
docs/: API.md  DEVELOPER.md  USER_GUIDE.md
frontend/: .dockerignore  Dockerfile  nginx.conf
public/: manifest.json
scripts/: entrypoint.sh  health-check.sh  init-db.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/generate/: page.tsx
src/app/profile/: page.tsx
src/app/result/: page.tsx
src/app/share/: page.tsx
src/app/upload/: page.tsx
src/components/: comparison-slider.tsx  radar-chart.tsx
src/components/layout/: mobile-layout.tsx
src/components/ui/: avatar.tsx  badge.tsx  card.tsx  empty.tsx  error.tsx  input.tsx  loading.tsx
src/lib/: store.ts
src/lib/api/: client.ts  types.ts
tests/: conftest.py  test_comment.py  test_face.py  test_generate.py  test_hairstyles.py  test_health.py  test_upload.py
